--- a/client/mainwindow.ui
+++ b/client/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>680</width>
-    <height>362</height>
+    <width>800</width>
+    <height>600</height>
    </rect>
   </property>
   <property name="maximumSize">
@@ -17,7 +17,10 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>DUNE 2000</string>
+  </property>
+  <property name="autoFillBackground">
+   <bool>false</bool>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(193, 125, 17);
@@ -42,15 +45,48 @@ border-color: rgb(0, 0, 0);</string>
     </item>
     <item row="5" column="0">
      <layout class="QVBoxLayout" name="vLayout_continue">
-      <item alignment="Qt::AlignVCenter">
+      <property name="spacing">
+       <number>6</number>
+      </property>
+      <property name="leftMargin">
+       <number>0</number>
+      </property>
+      <property name="bottomMargin">
+       <number>0</number>
+      </property>
+      <item alignment="Qt::AlignHCenter|Qt::AlignVCenter">
        <widget class="QPushButton" name="continueButton">
+        <property name="minimumSize">
+         <size>
+          <width>200</width>
+          <height>60</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>80</width>
+          <height>16777215</height>
+         </size>
+        </property>
+        <property name="baseSize">
+         <size>
+          <width>0</width>
+          <height>0</height>
+         </size>
+        </property>
         <property name="font">
          <font>
-          <family>Sarai</family>
+          <family>URW Gothic</family>
+          <pointsize>11</pointsize>
+          <weight>7</weight>
+          <italic>false</italic>
+          <bold>false</bold>
          </font>
         </property>
         <property name="styleSheet">
-         <string notr="true">border-color: rgb(0, 0, 0);</string>
+         <string notr="true">border-color: rgb(0, 0, 0);
+font: 63 11pt &quot;URW Gothic&quot;;
+background-color: rgb(193, 125, 17);</string>
         </property>
         <property name="text">
          <string>CONTINUE</string>
@@ -80,6 +116,9 @@ border-color: rgb(0, 0, 0);</string>
      <layout class="QVBoxLayout" name="vLayaout_ip">
       <item>
        <widget class="QLineEdit" name="lineEdit">
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(233, 185, 110);</string>
+        </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
         </property>
@@ -91,6 +130,9 @@ border-color: rgb(0, 0, 0);</string>
      <layout class="QVBoxLayout" name="vLayaout_port">
       <item>
        <widget class="QLineEdit" name="lineEdit_2">
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(233, 185, 110);</string>
+        </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
         </property>
@@ -120,13 +162,15 @@ border-color: rgb(0, 0, 0);</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>680</width>
+     <width>800</width>
      <height>22</height>
     </rect>
    </property>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
- <resources/>
+ <resources>
+  <include location="imagen.qrc"/>
+ </resources>
  <connections/>
 </ui>
