--- a/client/client_interface/choosehouse.ui
+++ b/client/client_interface/choosehouse.ui
@@ -11,14 +11,14 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>House Election</string>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(46, 52, 54);</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0" colspan="3">
-    <widget class="QLabel" name="label">
+    <widget class="QLabel" name="titleLabel">
      <property name="maximumSize">
       <size>
        <width>16777215</width>
@@ -34,7 +34,7 @@
     </widget>
    </item>
    <item row="1" column="0">
-    <widget class="QLabel" name="label_2">
+    <widget class="QLabel" name="harkonnenLabel">
      <property name="maximumSize">
       <size>
        <width>16777215</width>
@@ -50,7 +50,7 @@
     </widget>
    </item>
    <item row="1" column="1">
-    <widget class="QLabel" name="label_3">
+    <widget class="QLabel" name="atreidesLabel">
      <property name="maximumSize">
       <size>
        <width>16777215</width>
@@ -66,7 +66,7 @@
     </widget>
    </item>
    <item row="1" column="2">
-    <widget class="QLabel" name="label_4">
+    <widget class="QLabel" name="ordosLabel">
      <property name="maximumSize">
       <size>
        <width>16777215</width>
