--- a/client/client_interface/maingame.ui
+++ b/client/client_interface/maingame.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>QDialog</string>
+   <string>Mode Election</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="1" column="0">
@@ -21,6 +21,14 @@
        <width>16777215</width>
        <height>80</height>
       </size>
+     </property>
+     <property name="font">
+      <font>
+       <family>Sarai</family>
+       <pointsize>18</pointsize>
+       <italic>false</italic>
+       <bold>false</bold>
+      </font>
      </property>
      <property name="cursor">
       <cursorShape>PointingHandCursor</cursorShape>
@@ -71,16 +79,6 @@ background-color: rgb(85, 87, 83);</string>
     </widget>
    </item>
   </layout>
-  <widget class="QMenuBar" name="menubar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>84</width>
-     <height>22</height>
-    </rect>
-   </property>
-  </widget>
   <widget class="QStatusBar" name="statusbar">
    <property name="geometry">
     <rect>
